--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,13 +1,8 @@
 # Use the official Ubuntu base image
-FROM ubuntu:latest
+FROM ghcr.io/xu-cheng/texlive-full:latest
 
 # Set the working directory inside the container
 WORKDIR /app
-
-# Update the package lists and install necessary packages
-RUN apt-get update && apt-get install -y \
-    python3 \
-    python3-pip
 
 # Install Flask and Gunicorn
 RUN pip3 install flask gunicorn
