--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,14 +1,22 @@
 # Use the official Ubuntu base image
-FROM texlive/texlive:latest-medium
+FROM texlive/texlive:latest
 
 # Set the working directory inside the container
 WORKDIR /PGFPlotsEdt
 
-# Install Flask and Gunicorn
-RUN pip3 install flask gunicorn
+# Replace debian update to a local mirror if necessary
+# RUN sed -i 's/deb.debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list.d/debian.sources &&  \
+#     sed -i 's/security.debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list.d/debian.sources
 
-# Copy the project folder to the container
-COPY .. /PGFPlotsEdt
+# Update apt-get
+RUN apt-get update
+
+# Install Flask and Gunicorn
+RUN apt-get install python3-flask -y
+RUN apt-get install python3-gunicorn -y
+
+# Copy the previous directory into the container
+COPY . /PGFPlotsEdt
 
 # Set the working directory to the deploy folder
 WORKDIR /PGFPlotsEdt/deploy
