ci: fix git ownership

--- a/.github/workflows/doc-gen.yml
+++ b/.github/workflows/doc-gen.yml
@@ -19,6 +19,7 @@ jobs:
             apk add ghostscript imagemagick gnupg
             sed -i "s|<policy domain=\"coder\" rights=\"none\" pattern=\"PDF\" />|<policy domain=\"coder\" rights=\"read\|write\" pattern=\"PDF\" />|g" /etc/ImageMagick-*/policy.xml
             cd res
+            git config --global --add safe.directory /home/runner/work/PGFPlotsEdt/PGFPlotsEdt
             python3 version_updater.py
             cd ..
             cd docs
